Upgraded Java from version 17 to 21 using OpenRewrite recipe